--- a/static/index.html
+++ b/static/index.html
@@ -1,153 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-
-    <style>
-.loader {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  position: relative;
-  border: 4px solid #Fff;
-  top: 50%;
-  animation: loader 2s infinite ease;
-}
-.loader-wrapper {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: #242f3f;
-  display:flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
-.loader-inner {
-  vertical-align: top;
-  display: inline-block;
-  width: 100%;
-  background-color: #fff;
-  animation: loader-inner 2s infinite ease-in;
-}
-
-@keyframes loader {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  25% {
-    transform: rotate(180deg);
-  }
-
-  50% {
-    transform: rotate(180deg);
-  }
-
-  75% {
-    transform: rotate(360deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes loader-inner {
-  0% {
-    height: 0%;
-  }
-
-  25% {
-    height: 0%;
-  }
-
-  50% {
-    height: 100%;
-  }
-
-  75% {
-    height: 100%;
-  }
-
-  100% {
-    height: 0%;
-  }
-}
-
-        input{
-            width:50%;
-            height: 40px;
-            text-align: center;
-            border-radius: 10px;
-            border: none;
-            box-shadow: 2px 2px 2px 2px #e6e8eb;
-
-        }
-        input::placeholder {
-  text-align: center;
-}
-        #div-f {
-            height: 100px;
-            width: 100%;
-        }
-        #btn{
-            height: 45px;
-            width: 10%;
-            border-radius: 10px;
-            margin-left: 1.5%;
-            border: none;
-            background-color: #4287f5;
-            color: white;
-            box-shadow: 2px 2px 2px 2px #e6e8eb;
-        }
-
-        #myChart1{
-            margin-bottom: 100px;
-        }
-    </style>
-
-    <meta charset="UTF-8">
-    <title>Testing Flask </title>
-</head>
-<body>
-    <div class="loader-wrapper">
-    <span class="loader">
-        <span class="loader-inner">
-        </span>
-    </span>
-</div>
-
-    <h1 style="text-align: center; font-family:'Roboto'"> Disaster Pipeline </h1>
-    <div style="text-align: center">
-      <input type="text" id="name" placeholder="Input your message here ">
-        <button onclick="submitSentence()" id="btn"> Predict </button>
-    </div>
-
-    <div id="div-f">
-            <p>jddjdjjdj </p>
-    </div>
-    <div style="display: block">
-            <canvas id="myChart1" style=" text-align: center; display: none" height="1000px" width="3000px">
-
-
-    </canvas>
-            <canvas id="myChart2" style=" text-align: center; display: none" height="1000px" width="3000px">
-
-    </canvas>
-
-    </div>
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.3.0/dist/sql-asm-debug.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-{#<script type="text/javascript" src="../static/js/process_request.js"></script>#}
-
-
-
-
-</body>
+   <head>
+      <link rel="stylesheet" href="../static/style.css">
+      <meta charset="UTF-8">
+      <title>Disaster Response Pipeline </title>
+   </head>
+   <body>
+      <div class="loader-wrapper">
+         <span class="loader">
+         <span class="loader-inner">
+         </span>
+         </span>
+      </div>
+      <h1 style="text-align: center; font-family:'Roboto'"> Disaster Pipeline </h1>
+      <div style="text-align: center">
+         <input type="text" id="name" placeholder="Input your message here ">
+         <button onclick="submitSentence()" id="btn"> Predict </button>
+      </div>
+      <div id="div-f" style="text-align: center">
+         <div id="result" style="display: inline-flex; text-align: center; align-items: center; align-content: center">
+         </div>
+      </div>
+      <div style="display: block">
+         <canvas id="myChart1" style=" text-align: center; display: none" height="1000px" width="3000px">
+         </canvas>
+         <canvas id="myChart2" style=" text-align: center; display: none" height="1000px" width="3000px">
+         </canvas>
+      </div>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.3.0/dist/sql-asm-debug.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+      <script type="text/javascript" src="../static/js/process_request.js"></script>
+   </body>
 </html>
